layout/generic/nsPageFrame.cpp
@@ -585,7 +585,6 @@ nsSize nsPageFrame::ComputePageSize() const {
 
 void nsPageFrame::BuildDisplayList(nsDisplayListBuilder* aBuilder,
                                    const nsDisplayListSet& aLists) {
-  nsPresContext* pc = PresContext();
   nsDisplayList content;
   nsDisplayListSet set(&content, &content, &content, &content, &content,
                        &content);
@@ -593,7 +592,20 @@ void nsPageFrame::BuildDisplayList(nsDisplayListBuilder* aBuilder,
     DisplayListClipState::AutoSaveRestore clipState(aBuilder);
     clipState.Clear();
 
+    // We need to extend the building rect to include the specified page size,
+    // in case it is larger than the physical page size. In that case the
+    // nsPageFrame will be the size of the physical page, but the child
+    // nsPageContentFrame will be the larger specified page size.
+    // The more correct way to do this would be to fully reverse the result of
+    // ComputePagesPerSheetAndPageSizeTransform to handle this scaling, but
+    // this should have the same result and is easier.
+    const nsRect pageContentRect({0, 0}, ComputePageSize());
+    nsDisplayListBuilder::AutoBuildingDisplayList buildingForPageContentFrame(
+        aBuilder, this, pageContentRect, pageContentRect);
+
     nsContainerFrame::BuildDisplayList(aBuilder, set);
+
+    nsPresContext* const pc = PresContext();
     if (pc->IsRootPaginatedDocument()) {
       content.AppendNewToTop<nsDisplayHeaderFooter>(aBuilder, this);
 
